# max-chronicle

./: .gitignore  FOR_FRIENDS.md  INSTALL.md  LICENSE  README.md  pyproject.toml
max_chronicle/: __init__.py  automation.py  bootstrap.py  cli.py  config.py  db.py  mcp_server.py  native_automation.py  projections.py  runtime_context.py  scaffold.py  service.py  store.py
max_chronicle/docs/: ADR-0001-canonical-memory.md  IMPLEMENTATION_CHECKLIST.md  PLAN-MEMORY-V2.md  ROADMAP-ULTIMATE-MEMORY.md  SCHEMA_V1.md
max_chronicle/migrations/: 0001_init.sql  0002_projection_links.sql  0003_native_automation.sql  0004_fix_fts_update_triggers.sql  0005_memory_v2.sql  0006_stability_indexes.sql  0007_missing_indexes.sql
tests/: conftest.py  test_agent_contract.py  test_installable_scaffold.py  test_native_automation.py  test_store.py
